--- a/manifest/index.html
+++ b/manifest/index.html
@@ -7,10 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dash</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 </head>
 <body>
+  <button id="settings-btn">settings</button>
+  <div class="settings" id="settings">
+    <form class="name-form" id="name-form" action="#">
+      <input class="name-input" type="text" id="name-input" placeholder="NAME"/>
+      <button type="submit" class="name-button">add</button>
+    </form>
+  </div>
   
-  <script src="main.js"></script>
+  <div class="greeting-container">
+    <h2 class="greeting" id="greeting"></h2>
+  </div>
+
+  <script src="./js/background.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
