--- a/manifest/html/index.html
+++ b/manifest/html/index.html
@@ -1,5 +1,3 @@
-<!--============dash board===============-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dash</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
 </head>
 <body>
   <button id="settings-btn">settings</button>
@@ -22,7 +20,8 @@
     <h2 class="greeting" id="greeting"></h2>
   </div>
 
-  <script src="./js/background.js"></script>
-  <script src="./js/main.js"></script>
+  <button id="change-color"></button>
+  <script src="../js/main.js"></script>
+  <script src="../js/popup.js"></script>
 </body>
 </html>
