--- a/manifest/html/options.html
+++ b/manifest/html/options.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="../css/options.css">
   </head>
   <body>
     <div id="buttonDiv">
     </div>
+
     <div>
-      <p>Choose a different background color!</p>
+      <p>Options page</p>
+      <p>Choose a background color of the button in the pop up.</p>
+      <a href="../html/index.html">Back to dash board</a>
     </div>
-    <script src="options.js"></script>
-  </body>
+  
+  <script src="../js/options.js"></script>
+</body>
 </html>
