--- a/manifest/html/index.html
+++ b/manifest/html/index.html
@@ -8,20 +8,21 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
 </head>
 <body>
-  <button id="settings-btn">settings</button>
+  <button id="settings-btn">add name</button>
   <div class="settings" id="settings">
     <form class="name-form" id="name-form" action="#">
       <input class="name-input" type="text" id="name-input" placeholder="NAME"/>
       <button type="submit" class="name-button">add</button>
     </form>
   </div>
+  <p>Right click the icon for options page or</p>
+  <a href="./options.html">click here</a>
   
   <div class="greeting-container">
     <h2 class="greeting" id="greeting"></h2>
   </div>
 
-  <button id="change-color"></button>
+
   <script src="../js/main.js"></script>
-  <script src="../js/popup.js"></script>
 </body>
 </html>
